force-app/main/default/objects/leaseworks__Country__c/leaseworks__Country__c.object-meta.xml
<CustomObject>
    <label>Country</label>
    <nameField>
        <label>Country Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Countries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>