force-app/main/default/objects/leaseworks__Country__c/fields/leaseworks__Country_Summary__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Country_Summary__c</fullName>
    <label>Country Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>