force-app/main/default/objects/leaseworks__Country__c/fields/leaseworks__English_Court_Judgement__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__English_Court_Judgement__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Local court will enforce an English court judgment</inlineHelpText>
    <label>English Court Judgement</label>
    <type>Checkbox</type>
</CustomField>