force-app/main/default/objects/leaseworks__Country__c/fields/leaseworks__GDP__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__GDP__c</fullName>
    <inlineHelpText>Gross Domestic Product</inlineHelpText>
    <label>GDP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>