force-app/main/default/objects/leaseworks__Country__c/fields/leaseworks__New_York_Court_Judgment__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__New_York_Court_Judgment__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Local court will enforce a New York court judgment</inlineHelpText>
    <label>New York Court Judgment</label>
    <type>Checkbox</type>
</CustomField>