force-app/main/default/objects/leaseworks__Country__c/fields/leaseworks__Population__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Population__c</fullName>
    <description>Population</description>
    <label>Population</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>