force-app/main/default/objects/leaseworks__Country__c/fields/pro_Accounting__c.field-meta.xml
<CustomField>
    <fullName>pro_Accounting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accounting</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Countries_Accounting</relationshipName>
    <type>Lookup</type>
</CustomField>