force-app/main/default/objects/leaseworks__Country__c/fields/pro_Accounting_Name__c.field-meta.xml
<CustomField>
    <fullName>pro_Accounting_Name__c</fullName>
    <formula>pro_Accounting__r.FirstName + &#39; &#39; +  pro_Accounting__r.LastName</formula>
    <label>Accounting Name</label>
    <type>Text</type>
</CustomField>