force-app/main/default/objects/leaseworks__Country__c/fields/pro_Compliance__c.field-meta.xml
<CustomField>
    <fullName>pro_Compliance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compliance</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Countries_Compliance</relationshipName>
    <type>Lookup</type>
</CustomField>