force-app/main/default/objects/leaseworks__Country__c/fields/pro_Contracts__c.field-meta.xml
<CustomField>
    <fullName>pro_Contracts__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contracts</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Countries_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>