force-app/main/default/objects/leaseworks__Country__c/fields/pro_Credit__c.field-meta.xml
<CustomField>
    <fullName>pro_Credit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credit</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Countries_Credit</relationshipName>
    <type>Lookup</type>
</CustomField>