force-app/main/default/objects/leaseworks__Country__c/fields/pro_Debt__c.field-meta.xml
<CustomField>
    <fullName>pro_Debt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Debt</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Countries_Debt</relationshipName>
    <type>Lookup</type>
</CustomField>