force-app/main/default/objects/leaseworks__Country__c/fields/pro_Debt_Name__c.field-meta.xml
<CustomField>
    <fullName>pro_Debt_Name__c</fullName>
    <formula>pro_Debt__r.FirstName + &#39; &#39; +  pro_Debt__r.LastName</formula>
    <label>Debt Name</label>
    <type>Text</type>
</CustomField>