force-app/main/default/objects/leaseworks__Country__c/fields/pro_Investment_Strategy__c.field-meta.xml
<CustomField>
    <fullName>pro_Investment_Strategy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Investment / Strategy</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Countries_Investment_Strategy</relationshipName>
    <type>Lookup</type>
</CustomField>