force-app/main/default/objects/leaseworks__Country__c/fields/pro_Legal__c.field-meta.xml
<CustomField>
    <fullName>pro_Legal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legal</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Countries_Legal</relationshipName>
    <type>Lookup</type>
</CustomField>