force-app/main/default/objects/leaseworks__Country__c/fields/pro_Marketing__c.field-meta.xml
<CustomField>
    <fullName>pro_Marketing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marketing</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Countries</relationshipName>
    <type>Lookup</type>
</CustomField>