force-app/main/default/objects/leaseworks__Country__c/fields/pro_Marketing_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>pro_Marketing_Manager_Name__c</fullName>
    <formula>pro_Marketing__r.FirstName + &#39; &#39; +  pro_Marketing__r.LastName</formula>
    <label>Marketing Manager Name</label>
    <type>Text</type>
</CustomField>