force-app/main/default/objects/leaseworks__Country__c/fields/pro_MR_Claims__c.field-meta.xml
<CustomField>
    <fullName>pro_MR_Claims__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MR Claims</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Countries_MRClaims</relationshipName>
    <type>Lookup</type>
</CustomField>