force-app/main/default/objects/leaseworks__Country__c/fields/pro_Portfolio_Management__c.field-meta.xml
<CustomField>
    <fullName>pro_Portfolio_Management__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Portfolio Management</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Countries_Portfolio_Management</relationshipName>
    <type>Lookup</type>
</CustomField>