force-app/main/default/objects/leaseworks__Country__c/fields/pro_Portfolio_Management_Name__c.field-meta.xml
<CustomField>
    <fullName>pro_Portfolio_Management_Name__c</fullName>
    <formula>pro_Portfolio_Management__r.FirstName + &#39; &#39; +  pro_Portfolio_Management__r.LastName</formula>
    <label>Portfolio Management Name</label>
    <type>Text</type>
</CustomField>