force-app/main/default/objects/leaseworks__Country__c/fields/pro_Powerplant__c.field-meta.xml
<CustomField>
    <fullName>pro_Powerplant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Powerplant</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Countries_Powerplant</relationshipName>
    <type>Lookup</type>
</CustomField>