force-app/main/default/objects/leaseworks__Country__c/fields/pro_Pricing__c.field-meta.xml
<CustomField>
    <fullName>pro_Pricing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pricing</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Countries_Pricing</relationshipName>
    <type>Lookup</type>
</CustomField>