force-app/main/default/objects/leaseworks__Country__c/fields/pro_Pricing_Name__c.field-meta.xml
<CustomField>
    <fullName>pro_Pricing_Name__c</fullName>
    <formula>pro_Pricing__r.FirstName + &#39; &#39; +  pro_Pricing__r.LastName</formula>
    <label>Pricing Name</label>
    <type>Text</type>
</CustomField>