force-app/main/default/objects/leaseworks__Country__c/fields/pro_Receivables__c.field-meta.xml
<CustomField>
    <fullName>pro_Receivables__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Receivables</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Countries_Receivables</relationshipName>
    <type>Lookup</type>
</CustomField>