force-app/main/default/objects/leaseworks__Country__c/fields/pro_Tax__c.field-meta.xml
<CustomField>
    <fullName>pro_Tax__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tax</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Countries_Tax</relationshipName>
    <type>Lookup</type>
</CustomField>