force-app/main/default/objects/leaseworks__Country__c/fields/pro_Technical__c.field-meta.xml
<CustomField>
    <fullName>pro_Technical__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Technical</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Countries_Technical</relationshipName>
    <type>Lookup</type>
</CustomField>