force-app/main/default/objects/leaseworks__Country__c/fields/pro_Trading__c.field-meta.xml
<CustomField>
    <fullName>pro_Trading__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trading</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Countries_Trading</relationshipName>
    <type>Lookup</type>
</CustomField>