force-app/main/default/objects/leaseworks__Country__c/listViews/All_Countries_Team_Members.listView-meta.xml
<ListView>
    <fullName>All_Countries_Team_Members</fullName>
    <columns>NAME</columns>
    <columns>leaseworks__Capital__c</columns>
    <columns>leaseworks__Region__c</columns>
    <columns>Broad_Region__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>pro_Technical__c</columns>
    <columns>pro_Accounting__c</columns>
    <columns>pro_Contracts__c</columns>
    <columns>pro_Compliance__c</columns>
    <columns>pro_Credit__c</columns>
    <columns>pro_Legal__c</columns>
    <columns>pro_Marketing__c</columns>
    <columns>pro_MR_Claims__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Countries Team Members</label>
</ListView>