force-app/main/default/objects/leaseworks__Country__c/listViews/leaseworks__All.listView-meta.xml
<ListView>
    <fullName>leaseworks__All</fullName>
    <columns>NAME</columns>
    <columns>leaseworks__Capital__c</columns>
    <columns>leaseworks__Region__c</columns>
    <columns>Broad_Region__c</columns>
    <columns>leaseworks__Registration_Prefix__c</columns>
    <columns>leaseworks__Geneva_Convention__c</columns>
    <columns>leaseworks__Cape_Town_Convention__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>pro_Technical__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>